--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,39 @@
     <groupId>dem1</groupId>
     <artifactId>jentest</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+
+                        <includes>
+                            <include>runner.runner.java</include>
+                        </includes>
+                    </configuration>
+
+            </plugin>
+        </plugins>
+    </build>
+
+
+
+
     <dependencies>
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -75,8 +108,11 @@
         </dependency>
 
 
-
-
     </dependencies>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 
 </project>
